crates/bevy_derive/compile_fail/tests/deref_mut_derive/invalid_attribute_fail.stderr
error: unexpected token in attribute
  --> tests/deref_mut_derive/invalid_attribute_fail.rs:LL:CC
   |
LL |     #[deref()] String
   |            ^

error: unexpected token in attribute
  --> tests/deref_mut_derive/invalid_attribute_fail.rs:LL:CC
   |
LL |     #[deref()]
   |            ^

error: aborting due to 2 previous errors
